fix bugs on IE11

--- a/source/style/components/advantages.scss
+++ b/source/style/components/advantages.scss
@@ -46,6 +46,8 @@
 		}
 
 		&-text {
+			width: 100%;	
+			
 			font-family: $roman;
 			font-size: 18px;
 			line-height: 22px;
