--- a/source/style/components/contacts.scss
+++ b/source/style/components/contacts.scss
@@ -117,6 +117,8 @@
 	}
 
 	&__title {
+		width: 100%;
+		
 		font-family: $roman;
 
 		margin-right: 10px;
