--- a/source/style/components/feedbacks.scss
+++ b/source/style/components/feedbacks.scss
@@ -65,6 +65,8 @@
 	}
 
 	&__sign {
+		width: 100%;
+		
 		font-size: 14px;
 		line-height: 16px;
 
