--- a/source/style/components/lease.scss
+++ b/source/style/components/lease.scss
@@ -61,6 +61,8 @@
 	}
 
 	&__text {
+		width: 100%;
+		
 		font-size: 18px;
 		line-height: 24px;
 
