--- a/source/style/components/main-menu.scss
+++ b/source/style/components/main-menu.scss
@@ -84,7 +84,7 @@
 
 			border: none;
 
-			position: unset;	
+			position: static;	
 		}
 	}
 
