--- a/source/style/components/order-form.scss
+++ b/source/style/components/order-form.scss
@@ -104,7 +104,6 @@
 			border: none;
 
 			background: url('../img/icon/calendar.png') no-repeat 90% 50%, $background;
-			color: #afbdc9;
 
 			padding: 8px 15px;
 
