--- a/source/style/components/our-offers.scss
+++ b/source/style/components/our-offers.scss
@@ -42,6 +42,8 @@
 		padding: 15px 20px;
 
 		& li {
+			width: 100%;
+			
 			list-style-type: none;
 
 			line-height: 26px;
